<?xml version="1.0"?>
<package format="2">
  <name>camera_throttle_nodelet</name>
  <version>0.0.0</version>
  <description>The camera_throttle_nodelet package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>
</package>
